load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

# gazelle:prefix github.com/niukuo/go_slow
gazelle(name = "gazelle")

# keep
go_binary(
    name = "cfssl",
    embed = ["@com_github_cloudflare_cfssl//cmd/cfssl"],
    pure = "on",
    visibility = ["//visibility:public"],
)